# minerva-jess

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  app.py  auth_client.py  config.yaml.example  pyproject.toml  railway.json  requirements.txt  web.py
data/: translations.json  videos_cache.json
docs/: JESS_AGENT_INTERNAL.md  TODO.md
src/minerva_jess/: __init__.py  agent.py  cli.py  config.py  mcp_client.py  models.py  orca_client.py
static/: index.html
tests/: __init__.py  test_agent.py
