[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minerva-jess"
version = "1.0.0"
description = "Jess - Video Intelligence Agent powered by Minerva MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Company", email = "contact@example.com" }
]
keywords = ["ai", "video", "search", "mcp", "claude", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.39.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[project.scripts]
jess = "minerva_jess.cli:main"

[project.urls]
Homepage = "https://github.com/yourcompany/minerva-jess"
Documentation = "https://github.com/yourcompany/minerva-jess#readme"
Repository = "https://github.com/yourcompany/minerva-jess"

[tool.hatch.build.targets.wheel]
packages = ["src/minerva_jess"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
