[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minerva-jess"
version = "1.0.0"
description = "Jess - Video Intelligence Agent SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["ai", "video", "search", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyYAML>=6.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[project.urls]
Homepage = "https://github.com/urbancanary/minerva-jess"
Repository = "https://github.com/urbancanary/minerva-jess"

[tool.hatch.build.targets.wheel]
packages = ["src/minerva_jess"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
